corpus/parameters.txt
===
Empty parameters
===

PARAM ()

$a

---

(script
  (param_block (parameter_list))
  (script_block (statement (user_variable))))

===
Single parameter with type defined (with lowercase too)
===

param ($arg1)

$true

---

(script
  (param_block (parameter_list
    (parameter_declaration (user_variable))))
  (script_block (statement (boolean_value))))

===
Single parameter with type defined
===

PARAM ([string] $arg1)

$true

---

(script
  (param_block (parameter_list
    (parameter_declaration
      (attribute (identifier)) (user_variable))))
  (script_block (statement (boolean_value))))

===
Multiple parameters with attributes
===

PARAM ([string] $arg1, [string] $arg2)

$a

---

(script
  (param_block
    (parameter_list
      (parameter_declaration
        (attribute (identifier)) (user_variable))
      (parameter_declaration
        (attribute (identifier)) (user_variable))))
  (script_block (statement (user_variable))))

===
Multiple parameters with attributes, separated by commas
===

PARAM (
  [string] $arg1,
  [string] $arg2
)

$a

---

(script
  (param_block
    (parameter_list
      (parameter_declaration
        (attribute (identifier)) (user_variable))
      (parameter_declaration
        (attribute (identifier)) (user_variable))))
  (script_block (statement (user_variable))))

===
Multiple parameters with multiple attributes, separated by commas
===

PARAM (
  [Parameter]
  [string]
  $arg1,

  [Parameter]
  [string]
  $arg2
)

$a

---

(script
  (param_block
    (parameter_list
      (parameter_declaration
        (attribute (identifier)) (attribute (identifier)) (user_variable))
      (parameter_declaration
        (attribute (identifier)) (attribute (identifier)) (user_variable))))
  (script_block (statement (user_variable))))

===
Parameter with attributes, one with argument
===

param(
  [Parameter(ParameterSetName="p1")]
  [DateTime]
  $d
)

$true

---

(script
  (param_block
    (parameter_list
      (parameter_declaration
        (attribute (identifier)
          (attribute_arguments
            (attribute_argument (identifier) (string))))
        (attribute (identifier))
        (user_variable))))
  (script_block (statement (boolean_value))))

===
Parameter with attributes, one with multiple arguments
===

param(
  [Parameter(ParameterSetName="p1", Position=0)]
  [DateTime]
  $d
)

$true

---

(script
  (param_block
    (parameter_list
      (parameter_declaration
        (attribute (identifier)
          (attribute_arguments
            (attribute_argument (identifier) (string))
            (attribute_argument (identifier) (number))))
        (attribute (identifier))
        (user_variable))))
  (script_block (statement (boolean_value))))
